# ai_engineer

./: .env  .gitattributes  .gitattributes_ai_engineer.md  .gitignore  .gitignore_ai_engineer.md  LICENSE  LICENSE_ai_engineer.md  README.md  README_ai_engineer.md  ai_engineer.py  ai_engineer_ai_engineer.md  main.py  pyproject.toml  requirements.txt  requirements_ai_engineer.md  system_prompts.py  system_prompts_ai_engineer.md
ai_engineer_output/: ai_engineer_conversation_history_20240810191741.json
gpt/: __init___ai_engineer.md  openai_engineer.py  openai_engineer_ai_engineer.md
src/ai_engineer/: __init__.py  core.py  main.py  system_prompts.py
src/ai_engineer/services/: __init__.py  openai_engineer.py
