[tool.poetry]
name = "ai-engineer"
version = "0.1.0"
description = "A python lib for integrating with various AI models to co-engineer with you"
authors = ["Stefan du Plessis <67509094+stefanlduplessis@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "0.7.0"
anyio = "4.4.0"
certifi = "2024.7.4"
colorama = "0.4.6"
distro = "1.9.0"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.0"
idna = "3.7"
openai = "1.36.1"
pydantic = "2.8.2"
pydantic-core = "2.20.1"
sniffio = "1.3.1"
tqdm = "4.66.4"
typing-extensions = "4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
